--- a/filesWebService/pom.xml
+++ b/filesWebService/pom.xml
@@ -47,9 +47,9 @@
 			<version>1.19.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20160810</version>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
 		</dependency>
 	</dependencies>
 </project>
