--- a/filesWebService/pom.xml
+++ b/filesWebService/pom.xml
@@ -51,5 +51,10 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.agtinternational</groupId>
+			<artifactId>FilesReadService</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
