--- a/FilesWebService/pom.xml
+++ b/FilesWebService/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.agtinternational</groupId>
-	<artifactId>FilesReadService</artifactId>
+	<artifactId>ReadFilesService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
